Initial cleanup of some Lists, Sequences, and Cons code.
Updating to Java 18, Gradle 7.4, and latest dependencies.